# nonlinearbubbledynamics

./: README.md
DEM/: dem_train.py
DEM/data_gen/: data_gen.cpp  transform_data.ipynb  transform_data_hybrid.ipynb  transform_to_hybrid.py
DEM/run/hybrid/: CMakeLists.txt  bub_hybrid.cpp  figures.ipynb
DEM/run/normal/: CMakeLists.txt  bub.cpp  figures.ipynb
Dopri/Matlab/: BubbleDynamicsAnalysis.mlx  SpectralCollocationBubbleDynamicsSim.m
Dopri/cpp/: BubbleDynamics.cpp
